--- a/src/App.scss
+++ b/src/App.scss
@@ -1,49 +1,87 @@
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-
-
 .Container {
- 
-  background: linear-gradient(to bottom right, #4a00e0, #8e2de2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);font-family: 'Arial', sans-serif;
+  
+  .todo-header{
+    color: #fff;
+    letter-spacing: 10px;
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 20px;
+     margin-bottom: 20px;
+     border-radius: 10px;
+     width: 450px;
+}
+.submit{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  width: 450px;
   color: white;
-  font-family: 'Arial', sans-serif;
-  
-  .Todo{
-    background-color: black;
-    color: white;
-    border-radius: 2rem;
-    justify-content: space-between;
-    padding: 1rem;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    margin-left: 7px;
-    margin-right: 6px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 
-  
-}  
+  .Todo{
+    background: rgba(86, 40, 40, 0.7);
+    padding: 0px;
+    border-radius: 10px;
+    width: 450px;
+} 
+.todo-item{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 2px solid #ccc;
+  color: white;
+  font-size: 1.5rem;
 .TodoApp{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  padding: 2rem;
-  margin-left: 5px;
-  margin-left: 4px;
 }
-  .footer{
-    display: flex ;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    margin-left: 5px;
-    margin-left: 4px;
-  }
+.Does{
+  
+  margin-right: 20px;
+  margin-left: 20px
+}
 }
 
+
+.todo-item:last-child {
+  border-bottom: 10px;
+  
+}
+.todo-item input[type="checkbox"] {
+  margin-right: 10px;
+  margin-left: 20px;
+  
+}
+  .footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 450px;
+  margin-top: 20px;
+  color: white; 
+}
+
+.filters button.active {
+  border-bottom: 2px solid white;
+}
+
+.filters button:hover {
+  text-decoration: underline;
+}
+.filters{
+  display: flex;
+}
 }
